syntax = "proto3";

package peerv2;
option go_package="peerv2";

message ProxyRegisterMsg {
    string pubkey = 1;
}

message ProxyRegisterResponse {
    string result = 1;
}

service ProxyRegisterService{
    //Unary
    rpc ProxyRegister(ProxyRegisterMsg) returns (ProxyRegisterResponse) {};
}
